
Improved ZX Desktop:
-Added configurable icons to the ZX Desktop: icons to windows, icons to actions, file links
-Right mouse button is now used for secondary actions. It no longer simulates ESC key (unless you enable it on ZX Vision Settings)
-Allow to extend ZX Desktop vertically
-Added frame around emulated machine
-Added setting to mix scr image with background

Improved HiLow DataDrive emulation:
-Allow to Format, Browse and Chkdsk a Hilow DataDrive image (.ddh file)
-Allow to convert audio from a real Hilow DataDrive tape to an image file (.ddh)
-Added technical documentation on the extras package

Improved ZX Spectrum Next emulation: added sprite rendering priority bit
Improved ZRCP: allow to change command prompt
Improved generated TZX and PZX files: include date and ZEsarUX version in header
Improved Custom machine menu: added +2E MMC machine
Improved Tape browser: show autostart line on basic blocks


* Fixes:

Fixed handling files larger than 2 GB on 32 bit CPU (it also applies to the Windows version even on a 64 bit CPU)
Fixed using mmc images larger than 2 GB
Fixed redrawing ZX Desktop when resizing main ZEsarUX window
Fixed hang when using View Variables and memory is corrupted
Fixed hang pressing two times F-key assigned to Pause (Mac OS unaffected)
Fixed bug that may crash ZEsarUX when starting machine ZX Spectrum +2 Spanish. This is a bug that has always existed
Fixed losing inserted Z88 cards when changing cpu speed
Fixed Z80 behavior after EI or DD/FD prefixes and interrupts
Fixed Z80 behavior running block opcodes (LDIR, etc) and interrupts
Fixed .Z80 Timex TS2068 snapshot loading
Fixed showing Recent Files when file name contains character %
Fixed HiLow DataDrive emulation: can now load, save, format... all actions are now working
Fixed crash (stack smashing detected) when showing Debug CPU window (and compiled using -fstack-protector)